# ensembl-mcp

./: .codex.mcp.json  .env.template  .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/ensembl-clinical-variant/: SKILL.md
.agents/skills/ensembl-gene-disease/: SKILL.md
.agents/skills/ensembl-gene-lookup/: SKILL.md
.agents/skills/ensembl-protein-info/: SKILL.md
.agents/skills/ensembl-region-scan/: SKILL.md
.agents/skills/ensembl-transcript-info/: SKILL.md
.agents/skills/ensembl-variant-conversion/: SKILL.md
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/skills/ensembl-sequence-retrieval/: SKILL.md
.claude/skills/ensembl-species-genome/: SKILL.md
.claude/skills/ensembl-variant-lookup/: SKILL.md
.codex/: config.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
data/test/: pathogenic_snps.json  pathogenic_weights.parquet
docs/: cli_reference.md  client_setup.md  configuration.md  ensembl_beta_api_july2026_findings.md  ensembl_beta_backends.md  refget_and_architecture.md  validation.md  variant_contract.md
src/ensembl_mcp/: __init__.py  agent.py  backend_queries.py  cli.py  client.py  config.py  models.py  plugin_package.py  queries.py  server.py
tests/: conftest.py  test_agent.py  test_agent_snp_resolution.py  test_bulk_task.py  test_client.py  test_enriched_tools.py  test_plugin_package.py  test_tools.py  test_variation.py  test_wiring.py
