[project]
name = "ensembl-mcp"
version = "0.1.0"
description = "MCP for the ensembl beta"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "eliot>=1.18.0",
    "fastmcp[tasks]>=3.4.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "typer>=0.26.7",
]

[project.scripts]
ensembl-mcp = "ensembl_mcp.cli:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "agno>=2.6.11",
    "google-genai>=2.8.0",
    "openai>=2.41.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: hits the live Ensembl GraphQL endpoint (skipped on network failure)",
]
